objects/Lead_Score_Table__c.object
<CustomObject>
    <fields>
        <fullName>Interested_In_Number_of_Desks__c</fullName>
        <description>This field is used to match with Range For Interested Number Of Desk field of Lead</description>
        <label>Interested In Number of Desks</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <description>This field is used to store actual lead score.That will be update Demographic lead score on lead when matching lead record is found.</description>
        <label>Lead Score</label>
        <precision>11</precision>
        <required>true</required>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Aggregate__c</fullName>
        <description>This field is used to match with Lead Source of Lead</description>
        <label>Lead Source Aggregate</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail_Aggregate__c</fullName>
        <description>This field is used to match with Lead Source Detail of Lead</description>
        <label>Lead Source Detail Aggregate</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Interested__c</fullName>
        <description>This field is used to match with Building Interested Name of Lead</description>
        <label>Location Interested</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Full_Time_Employees__c</fullName>
        <description>This field is used to match with Unomy Company Size of Lead.</description>
        <label>Number Of Full Time Employees</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <description>This object is used to store calculation about the lead score which is used for lead assignment.</description>
    <label>Lead Score Table</label>
    <nameField>
        <label>Lead Score Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Score Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lead_Source_Aggregate__c</columns>
        <columns>Lead_Source_Detail_Aggregate__c</columns>
        <columns>Lead_Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Lead_Score_Table</fullName>
        <columns>NAME</columns>
        <columns>Lead_Source_Aggregate__c</columns>
        <columns>Lead_Source_Detail_Aggregate__c</columns>
        <columns>Number_Of_Full_Time_Employees__c</columns>
        <columns>Interested_In_Number_of_Desks__c</columns>
        <columns>Location_Interested__c</columns>
        <columns>Lead_Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>Lead Score Table</label>
    </listViews>
</CustomObject>